# paracl

./: CMakeLists.txt  ast.cc  ast.h  ast.hh  driver.cc  driver.h  driver.hh  exec.h  exec.hh  grammar.yy  inode.cc  inode.h  inode.hh  lexer.h  lexer.hh  lexer.ll  makefile  value.hh
programs/: assign.pc  elseif.pc  emptyloop.pc  fib.pc  fun_args.pc  fun_assign.pc  fun_fib.pc  fun_rec.pc  fun_return.pc  fun_while.pc  if.pc  ifelseprec.pc  ifonly.pc  scope.pc  scopecalc.pc  scoperet.pc  test.sh
programs/errors/: empties.pc  err.pc  error-013.pc  fun_no_args.pc  fun_udef.pc  func_as_int.pc  lexerr.pc  noexpr.pc  nooper.pc  nosemicolon.pc  outer_return.pc  test_err.sh
